--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ form .button input[type="submit"]:hover{
      <div class="container">
        <div class="title">Registration Form</div>
        <div class="content">
-         <form method="POST">
+         <form action="register.php" method="POST">
            <div class="user-details">
              <div class="input-box">
                <span class="details">Name</span>
